cambiar color de fondo en la rama cambios-fondo-1

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 h1 {font-family: Arial, sans-serif;
 font-size: 36px;
 text-align: center;}
-body{background-color: lavender;
+body{background-color: goldenrod;
 color: black}
 p{font-family: Georgia, serif;
 font-size: 18px;
